--- a/css/styles.css
+++ b/css/styles.css
@@ -48,9 +48,9 @@ ul::after {
     }
     
     ul.mainmenu > li {
-        display: inline-block;
-        padding: 1em;
-        font-size: 1.2em;
+        float: left;
+        width: 20%;
+        font-size: 1.5em;
         text-align: center;
     }
 
